@@ -1,3 +1,4 @@
+4/15/13 #3531 print out all possible equations in GameFactory.main
 9/6/12 #3434, change default behavior of "New Game" to no confirmation
 8/29/12 replace local copy of GameTimer with common.games.GameTimer
 # 1.01.00 (66652) Aug 7, 2012
